# ECE342Microcontroller

./: .ccsproject  .cproject  .project  README.md  main.c
.launches/: ECE342Microcontroller.launch
3rd-party-lib/: static_assert.h
3rd-party-lib/Ring-Buffer/: ringbuffer.c  ringbuffer.h
3rd-party-lib/pid_controller/: PID_Test.c  pid_controller.c
Debug/: ECE342Microcontroller.map  ECE342Microcontroller.out  ECE342Microcontroller_linkInfo.xml  ccsObjs.opt  main.d  makefile  sources.mk  subdir_rules.mk
Debug/driverlib/MSP430FR2xx_4xx/: adc.d  crc.d  cs.d  ecomp.d  eusci_a_spi.d  eusci_a_uart.d  eusci_b_i2c.d  eusci_b_spi.d  framctl.d  gpio.d  icc.d  lcd_e.d  mpy32.d  pmm.d  rtc.d  sac.d  sfr.d  subdir_rules.mk  sysctl.d  tia.d  timer_a.d  timer_b.d  tlv.d  wdt_a.d
hardware_abstraction_layer/: board.h  clock_driver.c  clock_driver.h  encoder_driver.c  encoder_driver.h  interrupt_service_routines.c  limit_switch_controller.h  motor_controller.c  motor_controller.h  motor_direct_driver.c  motor_direct_driver.h  physical_switch_driver.c  physical_switch_driver.h  pwm_driver.c  pwm_driver.h  servo_controller.c  servo_controller.h  servo_driver.c  servo_driver.h
hardware_abstraction_layer/pid_controller/: pid_controller.c  pid_controller.h  pid_controller_test.cc
hardware_abstraction_layer/ti_driverlib/MSP430FR2xx_4xx/: adc.c  adc.h  crc.c  crc.h  cs.c  cs.h  ecomp.c  (+41 more)
interpreter/: commands.c  commands.h  lcd_msg.c  lcd_msg.h  receiver.c  receiver.h  test.h
pid_controller_tdd/: CMakeLists.txt  pid_controller.c  pid_controller.h
targetConfigs/: MSP430FR4133.ccxml
(+50 files in other folders)
